<resources>
    <string name="app_name">Samiti</string>
    <string name="pageHeader">Samiti</string>
    <string name="listTitle">Summary</string>
    <string name="mobileNumber">123456789</string>
    <string name="mobileNo">Mobile No</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="title_activity_app_bar">AppBar</string>
    <string name="member_name">Member Name:</string>\
    <string name="member_name_label">Member Name</string>
    <string name="loan_amount">Loan Amount:</string>
    <string name="loan_amount_placeholder">Loan Amount</string>
    <string name="loan_amount_label">Loan Amount</string>
    <string name="penalty_amount">Penalty Amount</string>
    <string name="penalty_amount_label">Penalty Amount:</string>
    <string name="inverted_amount">Invested Amount:</string>
    <string name="member_status">Member Status: </string>
    <string name="loan_date">Loan Date:</string>
    <string name="loan_date_label">Loan Date</string>
    <string name="loan_date_placeholder">Loan Date (MM/DD/YYYY)</string>
    <string name="loan_emi">Loan EMI: </string>
    <string name="loan_emi_label">Loan EMI</string>
    <string name="total_amount">Total Amount:</string>
    <string name="total_amount_placeholder">Total Amount</string>
    <string name="total_amount_label">Total Amount</string>
    <string name="balance_amount">Balance Amount:</string>
    <string name="balance_amount_label">Balance Amount</string>
    <string name="interest_amount">Interest Amount:</string>
    <string name="interest_amount_label">Interest Amount</string>
    <string name="recovered_amount">Recovered Amount:</string>
    <string name="recovered_amount_label">Recovered Amount</string>
    <string name="amount_recovered">Amount Recovered: </string>
    <string name="interest_recovered">Interest Recovered: </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register User</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="member_id">Member Id: </string>
    <string name="member_id_hint">Member Id </string>
    <string name="member_id_label">Member Id</string>
    <string name="name">"Name: "</string>
    <string name="invested_money">Invested Money: </string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="user_registration">User Registration</string>
    <string name="add_new_loan">Add New Loan</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="cancel">Cancel</string>
    <string name="title_registartion">Registration Activity</string>
    <string name="view_detailed_summary">View Details</string>
    <string name="last_loan_details">Last Loan</string>
    <string name="last_loan_label">Last Loan</string>
    <string name="last_loan_view_details">View Details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select">Select Member</string>

    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="enter_password">Enter Password</string>
    <string name="paid">Paid</string>
    <string name="notPaid">Not Paid</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_menu">menu</string>
    <string name="action_setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="paid_tick">Paid Tick</string>
    <string name="not_paid">Not Paid</string>
    <string name="open_whats_app">Open Whats App</string>
    <string name="ruppes_white_icon">Ruppes White Icon</string>
    <string name="rupees_orange_icon">Rupees Orange Icon</string>
    <string name="todo">TODO</string>
    <string name="channel_name">Samiti Channel</string>channel_description
    <string name="channel_description">Samiti Notification Channel</string>
    <string name="guarantor_one">First Guarantor</string>
    <string name="guarantor_two">Second Guarantor</string>
    <string name="guarantor_one_label">First Guarantor: </string>
    <string name="guarantor_two_label">Second Guarantor: </string>
    <string name="guarantor_names">Guarantor Names: </string>
    <string name="guarantor_names_label">Guarantor Names</string>
    <string name="loan_status">Loan Status: </string>
    <string name="loan_status_label">Loan Status</string>
    <string name="generate_pdf">Samiti PDF</string>

    <string name="back">Back</string>
    <string name="settle">Settle</string>
    <string name="remove_member_btn">Remove Member</string>
    <string name="reset_database">Reset Database</string>
    <string name="closed">CLOSED</string>
    <string name="total">total</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="confirm">Confirm</string>
    <string name="add_loan">Add Loan</string>
    <string name="add">Add</string>
    <string name="loan_tenure">Loan Tenure</string>
    <string name="interest_earned">Interest Earned:</string>
    <string name="interest_earned_label">Interest Earned</string>
    <string name="active">Active</string>
    <string name="total_members">Total Members</string>
    <string name="active_members">Active Members</string>
    <string name="select_all">Select All</string>
</resources>