<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        layout="@layout/activity_app_bar"
        tools:ignore="InvalidId" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/summaryText"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/listTitle"
                android:textColor="@color/textPrimaryColor" />

            <TextView
                android:id="@+id/showSummaryDetails"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="170dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/view_detailed_summary"
                android:textColor="@color/link_color"
                android:textSize="12sp" />


        </LinearLayout>
        <include layout="@layout/activity_summary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loadDetailsText"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/last_loan_details"
                android:textColor="@color/textPrimaryColor" />

            <TextView
                android:id="@+id/lastLoanDetails"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/last_loan_view_details"
                android:textAlignment="center"
                android:textColor="@color/link_color"
                android:textSize="12sp" />


        </LinearLayout>
        <include layout="@layout/activity_loan_member" />
    </LinearLayout>

</RelativeLayout>