<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <include layout="@layout/activity_app_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@color/textSecondaryColor"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activity_title"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_loan"
            android:textColor="@color/textPrimaryColor"
            app:layout_constraintStart_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/memberIdTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/member_id_hint"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/activity_title">

            <AutoCompleteTextView
                android:id="@+id/memberIdAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/textPrimaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstGuarantorTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/guarantor_one"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/memberIdTextLayout">

            <AutoCompleteTextView
                android:id="@+id/firstGuarantorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/textPrimaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/secondGuarantorTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/guarantor_two"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/firstGuarantorTextLayout">

            <AutoCompleteTextView
                android:id="@+id/secondGuarantorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/textPrimaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalAmountTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/total_amount_placeholder"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/secondGuarantorTextLayout"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totalAmountTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/textPrimaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loanAmountTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/loan_amount_placeholder"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/totalAmountTextLayout"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loanAmountTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/textPrimaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/penaltyAmountTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/penalty_amount"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/loanAmountTextLayout"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/penaltyAmountTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/textPrimaryColor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loanDateTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/loan_date_placeholder"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/penaltyAmountTextLayout"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loanDateTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/textPrimaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/loanStatusLayout"
            app:layout_constraintStart_toEndOf="parent">

            <Button
                android:id="@+id/settleBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:background="@color/primaryColor"
                android:text="@string/settle"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <Button
                android:id="@+id/backBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_color"
                android:textColor="#FFFFFF"
                android:text="@string/back"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/settleBtn"
                />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loanDateTextLayout">

            <Button
                android:id="@+id/submitBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTintMode="screen"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/submit"
                android:textColor="@color/primaryColor" />

            <Button
                android:id="@+id/cancelBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:focusable="auto"
                android:text="@string/cancel"
                android:textColorLink="#F44336"
                android:visibility="visible" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loanAmountTextLayout"
            app:layout_constraintStart_toStartOf="@+id/loanAmountTextLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>