<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/icon_color"
            android:src="@drawable/new_group"/>

        <TextView
            android:id="@+id/memberIdLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/member_id_label"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/memberId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₹ 8,43,139"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="4dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/icon_color"
            android:src="@drawable/new_loan_amount"/>

        <TextView
            android:id="@+id/loanAmountLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/loan_amount_label"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/loanAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₹ 8,43,139"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="4dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/icon_color"
            android:src="@drawable/new_calendar"/>

        <TextView
            android:id="@+id/loanDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/loan_date_label"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/loanDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₹ 8,43,139"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="4dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/icon_color"
            android:src="@drawable/new_cash"/>

        <TextView
            android:id="@+id/loanEmiLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/loan_emi_label"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/loanEmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₹ 8,43,139"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="4dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/icon_color"
            android:src="@drawable/new_group"/>

        <TextView
            android:id="@+id/guarantorNamesLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/guarantor_names_label"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/guarantorNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₹ 8,43,139"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="4dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/icon_color"
            android:src="@drawable/new_check_list"/>

        <TextView
            android:id="@+id/loanStatusLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/loan_status_label"
            android:textSize="16sp"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:layout_gravity="center_vertical"
            app:chipBackgroundColor="#DFF5E6"/>
    </LinearLayout>
</LinearLayout>

